fixed dark mode issue

--- a/public/auth/css/style.css
+++ b/public/auth/css/style.css
@@ -3,6 +3,15 @@
     padding: 0;
 }
 
+
+
+body.dark {
+    background-color: rgb(25, 24, 24); 
+    filter:invert(1) hue-rotate(200deg) brightness(0.9);
+}
+.toggle-button {
+    border: none;
+}
 .auth-card {
     padding: 50px !important;
     border-radius: 5px !important;
